code/dotnet/FactSetConcordance/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Concordance client library for .NET

[![API Version](https://img.shields.io/badge/api-v2.11.0-blue)]()
[![Nuget](https://img.shields.io/badge/nuget-v2.1.0-orange)](https://www.nuget.org/packages/FactSet.SDK.FactSetConcordance/2.1.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)



The FactSet Concordance API enables Application Developers and Data Scientists to programmatically discover the FactSet Identifier for a specific Entity or Person based on attributes, such as name, URL, and location.FactSet Identifiers are mapped to industry-standard identifiers, as well as to a comprehensive set of reference data and unique content, to enhance the ability to quickly connect content sets.<p>  

 Using the submitted attributes, the FactSet Concordance API leverages FactSet’s extensive Entity Master, People, and Symbology databases to return potential candidate matches and a proposed match. The result is a concorded FactSet Identifier that can then be used as input throughout FactSet's expanding catalog of Content using our Content APIs or Standard DataFeeds.</p>
 
 <b>There are two types of workflows supported in the API:</b>
 
 <b>Entity & People Match:</b> The first workflow follows traditional API conventions in that a request is accepted and a response is returned synchronously enabling the concordance of up to 25 names in a single request. The response returns a list of 20 candidates as well as a proposed match.
 
 <b>Entity & People Match - Bulk:</b> The second workflow allows you to input a large list of names within a .CSV file in a single request. With this workflow, a task is created for uploading a set of queries. Once the task has completed, the client retrieves the concordance results through the /entity-decisions or /people-decisions endpoint. Note that in the Bulk workflow, only the matches for the records are returned. Candidates are not included.
 
 Once the service has provided a list of concorded FactSet Identifiers, you can then use our Entity Mappings and People Mappings endpoints to further review the universe of mapped identifiers or modify existing records. </p><p><b>Rate limit is set to 10 requests per second</b>.</p>
 
 Methodology Guide link: 
 [https://open.factset.com/api/public/media/download/products/documents/8ca33e81-a7da-4d77-a8cf-2b3a2e868b3d](https://open.factset.com/api/public/media/download/products/documents/8ca33e81-a7da-4d77-a8cf-2b3a2e868b3d)

 


This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.11.0
- SDK version: 2.1.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.FactSetConcordance -v 2.1.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.FactSetConcordance -Version 2.1.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.FactSetConcordance.Api;
using FactSet.SDK.FactSetConcordance.Client;
using FactSet.SDK.FactSetConcordance.Model;

namespace Example
{
    public static class GetEntityMatchExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.FactSetConcordance.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new EntityMatchApi(config);
            var name = "Tesla";  // string | Name of Entity to match.
            var country = "US";  // string | ISO2 country code corresponding to the entity name that is used when evaluating candidates for a match. For a list of ISO2 Country codes, visit [OA 8754](https://my.apps.factset.com/oa/pages/8754#country). (optional) 
            var state = "TX";  // string | Two-character state code corresponding to the entity name that is used when evaluating candidates for a match. Currently, only US state codes are supported. (optional) 
            var url = "www.tesla.com";  // string | URL corresponding to the entity name that is used when evaluating candidates for a match. (optional) 
            var includeEntityType = new List<string>(); // List<string> | Three-character FactSet entity type code used to filter candidates in order to determine the final match result. Only candidates with an entity type specified will be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Type Code|Entity Type Description|Entity Type Code|Entity Type Description|   |- --|- --|- --|- --|   |ABS|Asset-Backed|MED|Broadcast Call Sign|   |BAS|Business Association (JP)|MUC|Mutual Fd-Closed End|   |CAC|Consolidated Accounting|MUE|Mutual Fd-ETF|   |CMD|Commodity|MUT|Mutual Fd-Open End|   |COL|College/University|NPO|Non-Profit Organization|   |CUR|Currency|OPD|Operating Division|   |ESP|Emp Stk Ownership Plan|OTH|Other|   |EXT|Extinct|PEF|Pension Fund|   |FAF|Family of Fds (VC/Pvt EQ)|PRO|Real Property|   |FND|Foundation/Endowment|PUB|Public Company|   |FNS|Financing Subsidiary/SPE|PVF|Private Eq Fd/Alt Invt|   |FRX|ForEx|PVT|Private Company|   |GOV|Government|SOV|Sovereign Wealth Fund|   |HED|Hedge Fund|SUB|Subsidiary|   |HOL|Holding Company|TRU|Trust/Trustee|   |IDX|Index|UMB|Umbrella Fund|   |VEN|Venture Capital Fund|JVT|Joint Venture|  (optional) 
            var excludeEntityType = new List<string>(); // List<string> | Three-character FactSet entity type code used to filter candidates in order to determine the final match result. Candidates with an entity type specified will *not* be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Type Code|Entity Type Description|Entity Type Code|Entity Type Description|   |- --|- --|- --|- --| |ABS|Asset-Backed|MED|Broadcast Call Sign| |BAS|Business Association (JP)|MUC|Mutual Fd-Closed End| |CAC|Consolidated Accounting|MUE|Mutual Fd-ETF| |CMD|Commodity|MUT|Mutual Fd-Open End| |COL|College/University|NPO|Non-Profit Organization| |CUR|Currency|OPD|Operating Division| |ESP|Emp Stk Ownership Plan|OTH|Other| |EXT|Extinct|PEF|Pension Fund| |FAF|Family of Fds (VC/Pvt EQ)|PRO|Real Property| |FND|Foundation/Endowment|PUB|Public Company| |FNS|Financing Subsidiary/SPE|PVF|Private Eq Fd/Alt Invt| |FRX|ForEx|PVT|Private Company| |GOV|Government|SOV|Sovereign Wealth Fund| |HED|Hedge Fund|SUB|Subsidiary| |HOL|Holding Company|TRU|Trust/Trustee| |IDX|Index|UMB|Umbrella Fund| |VEN|Venture Capital Fund|JVT|Joint Venture|  (optional) 
            var includeEntitySubType = new List<string>(); // List<string> | Two-character FactSet entity subtype code used to filter candidates in order to determine the final match result. Only candidates with an entity subtype specified will be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Subtype Code|Entity Subtype Description|Entity Subtype Code|Entity Subtype Description|   |- --|- --|- --|- --|   |AR|Arbitrage|IC|Investment Company|   |BM|Bank Investment Division|IN|Insurance Company|   |BR|Broker|MF|Mutual Fund Manager|   |CP|Corporate|ML|Master Ltd Part|   |CU|Custodial|MM|Market Maker|   |FF|Fund of Funds Manager|PB|Private Banking/Wealth Mgmt|   |FH|Fund of Hedge Funds Manager|PF|Pension Fund Manager|   |FO|Foundation/Endowment Manager|PP|Real Estate Manager|   |FS|Fund Distributor|RE|Research Firm|   |FU|Fund|SB|Subsidiary Branch|   |FY|Family Office|ST|Stock Borrowing/Lending|   |GV|Govt (Fed/Local/Agency)|SV|Sovereign Wealth Manager|   |HF|Hedge Fund Manager|VC|Venture Capital/Pvt Equity|   |IA|Investment Adviser|   |IB|Investment Banking|  (optional) 
            var excludeEntitySubType = new List<string>(); // List<string> | Two-character FactSet entity subtype code used to filter candidates in order to determine the final match result. Candidates with an entity subtype specified will not be considered for the final match result. Multiple types can be entered separated by commas. |Entity Subtype Code|Entity Subtype Description|Entity Subtype Code|Entity Subtype Description| |- --|- --|- --|- --| |AR|Arbitrage|IC|Investment Company| |BM|Bank Investment Division|IN|Insurance Company| |BR|Broker|MF|Mutual Fund Manager| |CP|Corporate|ML|Master Ltd Part| |CU|Custodial|MM|Market Maker| |FF|Fund of Funds Manager|PB|Private Banking/Wealth Mgmt| |FH|Fund of Hedge Funds Manager|PF|Pension Fund Manager| |FO|Foundation/Endowment Manager|PP|Real Estate Manager| |FS|Fund Distributor|RE|Research Firm| |FU|Fund|SB|Subsidiary Branch| |FY|Family Office|ST|Stock Borrowing/Lending| |GV|Govt (Fed/Local/Agency)|SV|Sovereign Wealth Manager| |HF|Hedge Fund Manager|VC|Venture Capital/Pvt Equity| |IA|Investment Adviser| |IB|Investment Banking|  (optional) 
            var includeParent = false;  // bool? | Flag to include parent entities in the list of candidates. This parameter does not influence the match result. (optional)  (default to false)
            var bbgFigi = "BBG000N9P426";  // string | Input identifiers for the Bloomberg Listing/Regional/Security ID symbol type. (optional) 
            var bbgTicker = "TSLA UW";  // string | Input identifiers for the Bloomberg Listing and Regional Ticker symbol Type. (optional) 
            var bic = "TSLAUS66";  // string | Input identifiers for the BICCode - Bank Indentification Code symbol Type. (optional) 
            var cik = "1318605";  // string | Input identifiers for the CIK - Edgar Central Index Keys symbol type. (optional) 
            var crd = "CRD";  // string | Input identifiers for the CRD - Central Registration Depository symbol type. (optional) 
            var creditsafe = "DE00001447";  // string | Creditsafe Identifier (optional) 
            var crunchbase = "9d94b6c1-8b80-4169-8fd5-115bee96cde0";  // string | Crunchbase Identifier (optional) 
            var cusip = "88160R101";  // string | Input identifiers for the CUSIP symbol type. (optional) 
            var ein = "912197729";  // string | Input identifiers for the EIN - Employer Identification Number symbol type. (optional) 
            var factsetId = "006XY7-E";  // string | Input identifiers for the type FactSet Identifier - FactSet -E,-S,-R, -L Permanent Identifier symbol type. (optional) 
            var fitch = "FitchCreditRating";  // string | Input identifiers for the Fitch - Fitch Ratings symbol type. (optional) 
            var gvkey = "GVKey";  // string | Input identifiers for the type GVKEY - Compustat Global Company Key symbol type. (optional) 
            var gvkeyIid = "GVKeyIssueIdentifier";  // string | Input identifiers for the type GVKEY+IID - Compustat Global Company Key and Issue Identifier symbol type. (optional) 
            var isin = "US88160R1014";  // string | Input identifiers for the ISIN - International Securities Identification Number symbol type. (optional) 
            var jcn = "JCN";  // string | Input identifiers for the type JCN - Japanese Corporate Number symbol type. (optional) 
            var lei = "54930043XZGB27CTOV49";  // string | Input identifiers for the LEI - Legal Entity Identifier symbol type (optional) 
            var lxid = "LXID";  // string | Input identifiers for the type LXID - Markit Syndicated Loan Identifier symbol type. (optional) 
            var md = "823642219";  // string | Input identifiers for the Moody's Ratings Identifier type. (optional) 
            var redCode = "RedCode";  // string | Input identifiers for the type Red Code - Markit Reference Entity Identifier symbol type. (optional) 
            var rssd = "FederalReserveRSSDIdentifier";  // string | Input identifiers for the RSSD - Federal Reserve RSSD symbol typ. (optional) 
            var sedol = "B616C79";  // string | Input identifiers for the SEDOL symbol type. (optional) 
            var spr = "562703";  // string | Input identifiers for the Price Ticker symbol type. (optional) 
            var ticker = "PriceTicker";  // string | Input identifiers for the Price Ticker symbol type. (optional) 
            var tickerExchange = "TSLA-NAS";  // string | Input identifiers for the TickerExchange. (optional) 
            var tickerRegion = "TSLA-US";  // string | Input identifiers for the TickerRegion. (optional) 
            var ukch = "UKCompanyHouse";  // string | Input identifiers for the UKCH - UK Company House symbol type. (optional) 
            var valoren = "VALOR";  // string | Input identifiers for the Valoren (\"Valor\") symbol type. (optional) 
            var wkn = "A1CX3T";  // string | Input identifiers for the WKN - German Securities symbol type. (optional) 
            var candidatesCount = 40;  // int? | Maximum number of candidates to be returned. Parent entities, when includeParent is true, are not included in this count. <p>*minimum - 20*</p> <p>*maximum - 100*</p> (optional) 

            try
            {
                // Get Entity Candidates and Matches for a single name and attributes.
                EntityMatchesResponse result = apiInstance.GetEntityMatch(name, country, state, url, includeEntityType, excludeEntityType, includeEntitySubType, excludeEntitySubType, includeParent, bbgFigi, bbgTicker, bic, cik, crd, creditsafe, crunchbase, cusip, ein, factsetId, fitch, gvkey, gvkeyIid, isin, jcn, lei, lxid, md, redCode, rssd, sedol, spr, ticker, tickerExchange, tickerRegion, ukch, valoren, wkn, candidatesCount);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling EntityMatchApi.GetEntityMatch: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*EntityMatchApi* | [**GetEntityMatch**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMatchApi.md#getentitymatch) | **GET** /factset-concordance/v2/entity-match | Get Entity Candidates and Matches for a single name and attributes.
*EntityMatchApi* | [**GetEntityMatchForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMatchApi.md#getentitymatchforlist) | **POST** /factset-concordance/v2/entity-match | Get a list of Entity Candidates and Matches for a requested list of up to 25 names and attributes.
*EntityMatchBulkApi* | [**GetEntityDecisions**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMatchBulkApi.md#getentitydecisions) | **GET** /factset-concordance/v2/entity-decisions | Get the decisions of matches for the requested taskId.
*EntityMatchBulkApi* | [**GetEntityTaskForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMatchBulkApi.md#getentitytaskforlist) | **POST** /factset-concordance/v2/entity-task | Input a file with names and attributes, creating a taskId.
*EntityMatchBulkApi* | [**GetEntityTaskStatus**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMatchBulkApi.md#getentitytaskstatus) | **GET** /factset-concordance/v2/entity-task-status | Gets the status of the requested taskId or all tasks for a User
*MappingsApi* | [**GetEntityMappingDeleteForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/MappingsApi.md#getentitymappingdeleteforlist) | **POST** /factset-concordance/v2/entity-mapping-delete | Deletes mapping specified by the client.
*MappingsApi* | [**GetEntityMappingForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/MappingsApi.md#getentitymappingforlist) | **POST** /factset-concordance/v2/entity-mapping | Saves a single-mapping specified by the client.
*MappingsApi* | [**GetEntityUniverse**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/MappingsApi.md#getentityuniverse) | **GET** /factset-concordance/v2/entity-universe | Retrieve all saved mappings within a requested universe
*MappingsApi* | [**GetEntityUniverseForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/MappingsApi.md#getentityuniverseforlist) | **POST** /factset-concordance/v2/entity-universe | Retrieve all saved mappings within a requested universe or large list of client ids
*PeopleMappingApi* | [**GetPeopleMappingDeleteForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMappingApi.md#getpeoplemappingdeleteforlist) | **POST** /factset-concordance/v2/people-mapping-delete | Deletes mapping specified by the client.
*PeopleMappingApi* | [**GetPeopleMappingForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMappingApi.md#getpeoplemappingforlist) | **POST** /factset-concordance/v2/people-mapping | Saves a single-mapping specified by the client.
*PeopleMappingApi* | [**GetPeopleUniverse**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMappingApi.md#getpeopleuniverse) | **GET** /factset-concordance/v2/people-universe | Retrieve all saved mappings within a requested universe
*PeopleMappingApi* | [**GetPeopleUniverseForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMappingApi.md#getpeopleuniverseforlist) | **POST** /factset-concordance/v2/people-universe | Retrieve all saved mappings within a requested universe or large list of client ids
*PeopleMatchApi* | [**GetPeopleMatch**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMatchApi.md#getpeoplematch) | **GET** /factset-concordance/v2/people-match | Find potential people matches given a person's name.People matches can be retrieved using person's name and other attributes like firstname, middlename and lastname.
*PeopleMatchApi* | [**GetPeopleMatchForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMatchApi.md#getpeoplematchforlist) | **POST** /factset-concordance/v2/people-match | Find potential people matches given a person's name.
*PeopleMatchBulkApi* | [**GetPeopleDecisions**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMatchBulkApi.md#getpeopledecisions) | **GET** /factset-concordance/v2/people-decisions | Get the decisions of matches for the requested taskId.
*PeopleMatchBulkApi* | [**GetPeopleTaskForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMatchBulkApi.md#getpeopletaskforlist) | **POST** /factset-concordance/v2/people-task | Create a People Concordance Task.
*PeopleMatchBulkApi* | [**GetPeopleTaskStatus**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMatchBulkApi.md#getpeopletaskstatus) | **GET** /factset-concordance/v2/people-task-status | Get the Status of the People Tasks.
*SnowflakeApi* | [**GetSnowflakeEntityMatchForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/SnowflakeApi.md#getsnowflakeentitymatchforlist) | **POST** /factset-concordance/v2/snowflake-entity-match | Perform an entity search and return a snowflake-friendly response. Up to 25 Names per request.
*SnowflakeApi* | [**SnowflakeEntityMappingPost**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/SnowflakeApi.md#snowflakeentitymappingpost) | **POST** /factset-concordance/v2/snowflake-entity-mapping | Save entity mappings to a universe
*UniversesApi* | [**GetEntityUniverseStatistics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniversesApi.md#getentityuniversestatistics) | **GET** /factset-concordance/v2/entity-universe-statistics | Get statistics on a given universe
*UniversesApi* | [**GetUniverseForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniversesApi.md#getuniverseforlist) | **POST** /factset-concordance/v2/universe | Create a new universe
*UniversesApi* | [**GetUniverseStatistics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniversesApi.md#getuniversestatistics) | **GET** /factset-concordance/v2/universe-statistics | Get statistics on a given universe
*UniversesApi* | [**GetUniverses**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniversesApi.md#getuniverses) | **GET** /factset-concordance/v2/universes | Fetch metadata for universes
*UniversesApi* | [**GetUpdateUniverseForList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniversesApi.md#getupdateuniverseforlist) | **POST** /factset-concordance/v2/update-universe | Update metadata for an existing universe


## Documentation for Models

 - [Model.CreateUniverseRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/CreateUniverseRequest.md)
 - [Model.EntityDecisionsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityDecisionsResponse.md)
 - [Model.EntityMapping](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMapping.md)
 - [Model.EntityMappingDeleteRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMappingDeleteRequest.md)
 - [Model.EntityMappingDeleteResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMappingDeleteResponse.md)
 - [Model.EntityMappingRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMappingRequest.md)
 - [Model.EntityMappingResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMappingResponse.md)
 - [Model.EntityMatch](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMatch.md)
 - [Model.EntityMatchRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMatchRequest.md)
 - [Model.EntityMatchRequestInput](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMatchRequestInput.md)
 - [Model.EntityMatchesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityMatchesResponse.md)
 - [Model.EntityResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityResponse.md)
 - [Model.EntityTaskResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityTaskResponse.md)
 - [Model.EntityTaskStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityTaskStatus.md)
 - [Model.EntityTaskStatusResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityTaskStatusResponse.md)
 - [Model.EntityUniverseRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityUniverseRequest.md)
 - [Model.EntityUniverseResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityUniverseResponse.md)
 - [Model.EntityUniverseStatisticsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/EntityUniverseStatisticsResponse.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/ErrorResponse.md)
 - [Model.ErrorResponseSubErrors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/ErrorResponseSubErrors.md)
 - [Model.MapStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/MapStatus.md)
 - [Model.PeopleDecisions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleDecisions.md)
 - [Model.PeopleDecisionsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleDecisionsResponse.md)
 - [Model.PeopleMapping](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMapping.md)
 - [Model.PeopleMappingDeleteResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMappingDeleteResponse.md)
 - [Model.PeopleMappingRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMappingRequest.md)
 - [Model.PeopleMappingResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMappingResponse.md)
 - [Model.PeopleMatch](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMatch.md)
 - [Model.PeopleMatchRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMatchRequest.md)
 - [Model.PeopleMatchRequestInput](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMatchRequestInput.md)
 - [Model.PeopleMatchesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleMatchesResponse.md)
 - [Model.PeopleTask](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleTask.md)
 - [Model.PeopleTaskResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleTaskResponse.md)
 - [Model.PeopleTaskStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleTaskStatus.md)
 - [Model.PeopleTaskStatusResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleTaskStatusResponse.md)
 - [Model.PeopleUniverseRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleUniverseRequest.md)
 - [Model.PeopleUniverseResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/PeopleUniverseResponse.md)
 - [Model.SnowflakeEntityMappingRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/SnowflakeEntityMappingRequest.md)
 - [Model.SnowflakeEntityMappingResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/SnowflakeEntityMappingResponse.md)
 - [Model.SnowflakeEntityMatchRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/SnowflakeEntityMatchRequest.md)
 - [Model.SnowflakeEntityMatchResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/SnowflakeEntityMatchResponse.md)
 - [Model.Universe](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/Universe.md)
 - [Model.UniverseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniverseMeta.md)
 - [Model.UniverseMetaResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniverseMetaResponse.md)
 - [Model.UniverseStatistics](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniverseStatistics.md)
 - [Model.UniverseStatisticsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniverseStatisticsResponse.md)
 - [Model.UniversesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UniversesResponse.md)
 - [Model.UpdateUniverseRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/FactSetConcordance/v2/docs/UpdateUniverseRequest.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
